syntax = "proto3";

option go_package = "./;marketdataproto";

service marketdata {
  rpc PublishLatestPriceInformation (PublishLatestPriceInformationRequest) returns (PublishLatestPriceInformationResponse) {}

  rpc PublishVolatilityInformation (PublishVolatilityInformationRequest) returns (PublishVolatilityInformationResponse) {}

  rpc PublishATHInformation (PublishATHInformationRequest) returns (PublishATHInformationResponse) {}

  rpc PublishFundingRatesInformation (PublishFundingRatesInformationRequest) returns (PublishFundingRatesInformationResponse) {}

  rpc PublishSolanaNFTPriceInformation (PublishSolanaNFTPriceInformationRequest) returns (PublishSolanaNFTPriceInformationResponse) {}
}
 
message PublishLatestPriceInformationRequest {}

message PublishLatestPriceInformationResponse {}

message PublishVolatilityInformationRequest {}

message PublishVolatilityInformationResponse {}

message PublishATHInformationRequest {}

message PublishATHInformationResponse {}

message PublishFundingRatesInformationRequest {}

message PublishFundingRatesInformationResponse {}

message PublishSolanaNFTPriceInformationRequest {}

message PublishSolanaNFTPriceInformationResponse {}
